{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "100470c4-19a3-4f01-adc5-71d1956bfa55",
            "actions": [
                {
                    "name": "PrimaryTouchContact",
                    "type": "Button",
                    "id": "ec9dca21-850e-432d-bc6d-71df9cd6d2b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "289b2379-0a03-4793-91ca-c87293a27b76",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryDeltaPosition",
                    "type": "Value",
                    "id": "b0e8c754-56e4-4402-a944-0f323e73b36b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryTouchPress",
                    "type": "Button",
                    "id": "ea050ad7-7577-4b4b-a947-93dd701e3547",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.05)"
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "06da8af6-71e6-4967-8d93-83f600737064",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "b3f74985-1280-426b-adee-4a9f8d57fae4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryDeltaPosition",
                    "type": "Value",
                    "id": "8b14a67d-844e-4714-9fc6-59b6c9d63eac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f78309fe-8150-4d73-b577-5a189b7cc207",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fd46b2a-2c42-4ecb-a283-684a968f10cf",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5b98430-fa2d-4023-9cb2-1633292a016e",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryDeltaPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f11b6cff-71d3-442e-a518-68bce0fb1c1c",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5ad37ee-eacd-466a-af6c-a82473172ec5",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryDeltaPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee2509a0-fd94-414c-812b-8cd1188f83a8",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d5347eb-b3f3-4b4b-8e54-abcca74592ed",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1642da1-0b18-4bd8-b3ab-fef60927e3af",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "efa95e04-939c-44e9-a526-db4c111f6aee",
            "actions": [
                {
                    "name": "ScrollWheel",
                    "type": "Value",
                    "id": "805d7aaa-0371-4640-bf3b-94fa054688c7",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "073dd72e-5bb4-431a-b73e-48af04070d74",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b9c2b9d6-8882-4e03-a3be-50f8c9cf4248",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "040a65cf-e76b-4833-b58e-45a2387c2b8a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}